--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'net.glasslauncher'
-version '1.2'
+version '1.3'
 
 sourceCompatibility = 1.8
 
@@ -39,11 +39,13 @@ publishing {
 
     repositories {
         mavenLocal()
-        maven {
-            url = "${maven_url}"
-            credentials {
-                username "${maven_username}"
-                password "${maven_password}"
+        if (project.hasProperty("glass_maven_username")) {
+            maven {
+                url = "${glass_maven_url}"
+                credentials {
+                    username "${glass_maven_username}"
+                    password "${glass_maven_password}"
+                }
             }
         }
     }
